xlive: add initial stub dll

--- a/configure.ac
+++ b/configure.ac
@@ -2801,6 +2801,7 @@ WINE_CONFIG_DLL(xinput1_2)
 WINE_CONFIG_DLL(xinput1_3,,[xinput])
 WINE_CONFIG_TEST(dlls/xinput1_3/tests)
 WINE_CONFIG_DLL(xinput9_1_0)
+WINE_CONFIG_DLL(xlive)
 WINE_CONFIG_DLL(xmllite)
 WINE_CONFIG_TEST(dlls/xmllite/tests)
 WINE_CONFIG_MAKEFILE([documentation])
