--- a/configure.ac
+++ b/configure.ac
@@ -2802,6 +2802,7 @@ WINE_CONFIG_DLL(xinput1_3,,[xinput])
 WINE_CONFIG_TEST(dlls/xinput1_3/tests)
 WINE_CONFIG_DLL(xinput9_1_0)
 WINE_CONFIG_DLL(xlive)
+WINE_CONFIG_TEST(dlls/xlive/tests)
 WINE_CONFIG_DLL(xmllite)
 WINE_CONFIG_TEST(dlls/xmllite/tests)
 WINE_CONFIG_MAKEFILE([documentation])
